[package]
name = "NDI"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
axum-extra = { version = "0.12.2", features = ["cookie", "typed-header"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
